--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background-color: #e74b32;
+  background-color: #619FCD;
   background-size: 100% 100%;
 }
 
